# pchan

./: .gitignore  Cargo.toml  bacon.toml  graph.dot  notes.md  pchan-dump-0x0000277c.text  pchan-dump-0xbfc00e6c.text  pchan-dump-0xbfc0691c.text  pchan-dump-0xbfc0692c.text  readme.md  rustfmt.toml
.config/: nextest.toml
pchan-audio/: Cargo.toml
pchan-audio/src/: lib.rs
pchan-bind/: Cargo.toml
pchan-bind/src/: lib.rs
pchan-cranelift-frontend/: .cargo_vcs_info.json  Cargo.toml
pchan-cranelift-frontend/src/: frontend.rs
pchan-dbg/: Cargo.toml
pchan-dbg-egui/: Cargo.toml
pchan-dbg-egui/src/: main.rs
pchan-dbg-v2/: Cargo.toml  lipgloss-colors.sh
pchan-dbg-v2/src/: display.rs  init.rs  lipgloss-colors.rs  main.rs
pchan-dbg-v2/src/widgets/: button.rs  checkbox.rs  widgets.rs
pchan-dbg/src/: asm_dump_widget.rs  emu-task.rs  lipgloss-colors.rs  main.rs  mem_widget.rs  tty_widget.rs  utils.rs  vram_widget.rs
pchan-debug/: Cargo.toml
pchan-debug-tui/: Cargo.toml
pchan-debug-tui/src/: main.rs  utils.rs
pchan-debug-tui/src/app/: app.rs  component.rs  first_time_setup.rs  focus.rs  mod.rs  modeline.rs
pchan-debug/src/: main.rs
pchan-emu/: Cargo.toml
pchan-emu/benches/: bench_bios_func_1.rs  bench_dynarec_v2.rs  bench_op_decoding.rs  bench_run.rs  bios_func_1.rs  dynarec_v2.rs  op_decoding.rs
pchan-emu/src/: bindings.rs  debug.rs  dynarec.rs  emu_tests.rs  lib.rs  sparse-queue.rs
pchan-emu/src/bootloader/: mod.rs
pchan-emu/src/cpu/: cranelift_tests.rs  exceptions.rs  mod.rs  op.rs  pipeline_tests.rs
pchan-emu/src/cpu/op/: add.rs  jump.rs  load.rs  store.rs  sub.rs
pchan-emu/src/cpu/ops/: addiu.rs  addu.rs  and.rs  andi.rs  beq.rs  bgez.rs  bgtz.rs  blez.rs  bltz.rs  bne.rs  brk.rs  decode_tests.rs  div.rs  divu.rs  j.rs  jal.rs  jalr.rs  jr.rs  lb.rs  lbu.rs  lh.rs  lhu.rs  load.rs  lui.rs  lw.rs  lwc.rs  mfc.rs  mfhi.rs  mflo.rs  mod.rs  mtc.rs  mthi.rs  mtlo.rs  mult.rs  multu.rs  nor.rs  or.rs  ori.rs  rfe.rs  sb.rs  (+17 more)
pchan-emu/src/dynarec/: builder.rs  dynarec.rs  jit_summary.rs  pipeline.rs
pchan-emu/src/dynarec-v2/: dynarec-v2.rs  dynarec_ops.rs  emitters.rs  regalloc.rs
pchan-emu/src/gpu/: draw_call.rs  gpu.rs
pchan-emu/src/io/: cdrom.rs  dma.rs  io.rs  irq.rs  timers.rs  tty.rs  vblank.rs
pchan-emu/src/jit/: mod.rs
pchan-emu/src/memory/: fastmem.rs  mod.rs
pchan-emu/src/spu/: adpcm.rs  adsr.rs  gauss_interp.rs  spu.rs
pchan-emu/tests/: amidog_cpu.rs  boot.rs  cache.rs  common.rs  memmap.rs  tty.rs
pchan-gpu/: Cargo.toml
pchan-gpu/shaders/: display.wgsl  draw_call_rect.wgsl
pchan-gpu/src/: lib.rs  render_pass.rs
pchan-macros/: Cargo.toml
pchan-macros/src/: lib.rs
pchan-utils/: Cargo.toml
pchan-utils/benches/: hex.rs
pchan-utils/src/: lib.rs
src/: bench.rs  lib.rs  main.rs
