[package]
edition = "2024"
name = "pchan"
version = "0.1.0"

[dependencies]
bstr = "1.12.1"

[dependencies.const-hex]
workspace = true
features = ["alloc"]

[dependencies.pchan-macros]
workspace = true

[dependencies.pchan-utils]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[workspace]
members = [
    "pchan-emu",
    "pchan-macros",
    "pchan-utils",
    "pchan-debug-tui",
    "pchan-gpu",
    "pchan-dbg",
]
resolver = "3"

[workspace.dependencies]
color-eyre = "0.6.5"
slab = "0.4.12"
tracing = "0.1.44"

[workspace.dependencies.const-hex]
version = "1.17.0"
features = [
    "nightly",
    "portable-simd",
]

[workspace.dependencies.pchan-emu]
path = "./pchan-emu"

[workspace.dependencies.pchan-macros]
path = "./pchan-macros"

[workspace.dependencies.pchan-utils]
path = "./pchan-utils"

[workspace.dependencies.tracing-subscriber]
version = "0.3.22"
features = ["env-filter"]

[profile.bench]
debug = 2

[profile.dev]
panic = "unwind"

[profile.release]
lto = "thin"
panic = "unwind"
