cargo-features = ["profile-rustflags"]

[package]
edition = "2024"
name = "pchan"
version = "0.1.0"

[dependencies]
bstr = "1.12.1"

[dependencies.const-hex]
workspace = true
features = ["alloc"]

[dependencies.pchan-macros]
workspace = true

[dependencies.pchan-utils]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[workspace]
members = [
    "pchan-emu",
    "pchan-macros",
    "pchan-utils",
    "pchan-debug-tui",
    "pchan-gpu",
    "pchan-dbg",
]
resolver = "3"

[workspace.dependencies]
color-eyre = "0.6.5"
slab = "0.4.12"
tracing = "0.1.44"
bitbybit = "2.0.0"
arbitrary-int = "2.1.1"

[workspace.dependencies.const-hex]
version = "1.18.1"
features = [
    "nightly",
    "portable-simd",
]

[workspace.dependencies.pchan-emu]
path = "./pchan-emu"

[workspace.dependencies.pchan-macros]
path = "./pchan-macros"

[workspace.dependencies.pchan-utils]
path = "./pchan-utils"

[workspace.dependencies.tracing-subscriber]
version = "0.3.23"
features = ["env-filter"]

[profile.bench]
debug = 2

[profile.dev]
panic = "unwind"

[profile.release]
lto = "thin"
panic = "unwind"

[profile.san]
inherits = "dev"          # or "release" if you want optimized + sanitized
opt-level = 1             # 0 = fastest checks, 1-2 = better perf with still good debug
debug = true              # full debug info (stack traces in reports)
overflow-checks = true
panic = "abort"           # optional: makes errors more obvious, but breaks some unwinding
rustflags = [
    "-Zsanitizer=address",
    # "-Zsanitizer=leak",
    # "-Zsanitizer=hwaddress",           
]
