cargo-features = ["profile-rustflags"]

[package]
name = "pchan"
version = "0.1.0"
edition = "2024"

[dependencies]
bstr = "1.12.1"
const-hex = { workspace = true, features = ["alloc"] }
pchan-macros = { workspace = true }
pchan-utils = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[workspace]
resolver = "3"
members = [
    "pchan-emu",
    "pchan-macros",
    "pchan-utils",
    "pchan-debug-tui",
    "pchan-gpu",
    "pchan-dbg",
]

[workspace.dependencies]
arbitrary-int = "2.1.1"
bitbybit = "2.0.0"
color-eyre = "0.6.5"
slab = "0.4.12"
tracing = "0.1.44"
const-hex = { version = "1.18.1", features = ["nightly", "portable-simd"] }
pchan-emu = { path = "./pchan-emu" }
pchan-gpu = { path = "./pchan-gpu" }
pchan-macros = { path = "./pchan-macros" }
pchan-utils = { path = "./pchan-utils" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
kanal = "0.1.1"

[profile.dev]
panic = "unwind"

[profile.release]
lto = "thin"
panic = "unwind"

[profile.bench]
debug = 2

[profile.san]
inherits = "dev"
opt-level = 1
debug = true
overflow-checks = true
panic = "abort"
rustflags = ["-Zsanitizer=address"]
