[package]
name = "pchan-dbg-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.34.1"
egui-wgpu = "0.34.1"
egui-winit = { version = "0.34.1", features = ["accesskit"] }
glam = "0.32.1"
miette = { version = "7.6.0", features = ["fancy"] }
miette-panic = "0.1.0"
pchan-audio = { version = "0.1.0", path = "../pchan-audio" }
pchan-bind.workspace = true
pchan-emu.workspace = true
pchan-gpu.workspace = true
pchan-utils.workspace = true
smol = "2.0.2"
spin_sleep = "1.3.3"
tracing = { workspace = true, features = ["async-await"] }
