[package]
name = "pchan-dbg-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm-simple-event = "0.1.0"
ratatui = "0.30.0"
image = { version = "0.25.10", default-features = false, features = ["bmp"] }
miette = { version = "7.6.0", features = ["fancy"] }
miette-panic = "0.1.0"
pchan-audio.workspace = true
pchan-bind.workspace = true
pchan-emu = { workspace = true, features = ["debugger-ext"] }
pchan-gpu.workspace = true
pchan-utils.workspace = true
spin_sleep = "1.3.3"
tracing = "0.1.44"
wgpu = "29.0.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
smol = "2.0.2"
rat-imaginary = { version = "0.1.0", path = "./rat-imaginary" }
rat-widget = "3.2.1"
