[package]
name = "pchan-dbg"
version = "0.1.0"
authors = ["wyvernbw <iamwyvern511@gmail.com>"]
edition = "2024"

[dependencies]
color-eyre = "*"
flume = { version = "0.12.0", default-features = false, features = ["async"] }
manatui = { git = "https://github.com/wyvernbw/manatui.git", features = ["macros", "nightly"] }
manatui-tea-ui = { git = "https://github.com/wyvernbw/manatui.git", version = "0.1.0" }
pchan-emu = { workspace = true, features = ["fetch-channel"] }
pchan-utils = { workspace = true, path = "../pchan-utils" }
tokio = { version = "1.50.0", features = ["fs", "io-util", "macros", "process", "rt"] }
tracing.workspace = true
