[package]
name = "pchan-dbg"
version = "0.1.0"
authors = ["wyvernbw <iamwyvern511@gmail.com>"]
edition = "2024"

[dependencies]
arbitrary-int = "2.1.1"
bitbybit = "2.0.0"
color-eyre = "*"
flume = { version = "0.12.0", default-features = false, features = ["async"] }
image = { version = "0.25.10", default-features = false }
manatui = { git = "https://github.com/wyvernbw/manatui.git", features = ["macros", "nightly"] }
manatui-tea-ui = { git = "https://github.com/wyvernbw/manatui.git", version = "0.1.0" }
pchan-emu = { workspace = true, features = ["fetch-channel"] }
pchan-gpu.workspace = true
pchan-utils = { workspace = true, path = "../pchan-utils" }
ratatui-image = { version = "10.0.6", default-features = false }
tokio = { version = "1.50.0", features = ["fs", "io-util", "macros", "process", "rt"] }
tracing.workspace = true
