[package]
name = "pchan-debug-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
derive_more = { version = "2.0.1", features = ["add", "debug", "display"] }
strum = { version = "0.27.2", features = ["derive"] }
pchan-macros = { workspace = true }
pchan-utils = { workspace = true }
pchan-emu = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true } 
tui-logger = { version = "0.17.3", features = ["tracing", "crossterm", "tracing-subscriber", "tracing-support"] }
flume = "0.11.1"
tui-input = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.11.0"
confy = { version = "1.0.0", default-features = false, features = ["ron", "ron_conf"] }
