[package]
name = "pchan-emu"
version = "0.1.0"
edition = "2024"

[features]
fetch-channel = []
amidog-tests = []

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pchan-macros = { workspace = true }
pchan-utils = { workspace = true }
slab.workspace = true

arbitrary-int = "2.1.1"
bitbybit = "2.0.0"
bitvec = "1.0.1"
bon = "3.9.0"
byteorder = "1.5.0"
circular-buffer = "1.2.0"
color-eyre = "*"
const-hex.workspace = true
derive_more = { version = "2.1.1", features = ["add", "debug", "deref", "display", "full"] }
dynasm = "5.0.0"
dynasmrt = "5.0.0"
enum_dispatch = "0.3.13"
flume = "0.12.0"
heapless = "0.9.2"
rapidhash = { version = "4.4.0", features = ["nightly"] }
rayon = "1.11.0"
smallbox = { version = "0.8.8", features = ["nightly"] }
smallvec = "1.15.1"
smol = "2.0.2"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
bstr = "1.12.1"
bitfield = "0.19.4"

[dev-dependencies]
pretty_assertions = {version = "1.4.1", features = ["unstable"]}
rstest = "*"
color-eyre = "*" 
criterion = { version = "0.8", features = ["html_reports"] }


[[bench]]
name = "bench_dynarec_v2"
harness = false
