[package]
name = "pchan-emu"
version = "0.1.0"
edition = "2024"

[features]
fetch-channel = []
amidog-tests = []
debugger-ext = []

[dependencies]
tracing = { workspace = true }
pchan-macros = { workspace = true }
pchan-utils = { workspace = true }
pchan-bind.workspace = true
kanal.workspace = true
arbitrary-int.workspace = true
bitbybit.workspace = true
bitvec = "1.0.1"
bon = "3.9.1"
byteorder = "1.5.0"
derive_more = { version = "2.1.1", features = ["add", "debug", "deref", "display", "full"] }
dynasm = "5.0.0"
dynasmrt = "5.0.0"
enum_dispatch = "0.3.13"
heapless = "0.9.2"
rapidhash = { version = "4.4.1", features = ["nightly"] }
smallbox = { version = "0.8.8", features = ["nightly"] }
smallvec = { version = "1.15.1", features = ["const_new"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
glam = "0.32.1"
rayon = "1.12.0"

[dev-dependencies]
pretty_assertions = {version = "1.4.1", features = ["unstable"]}
rstest = "*"
color-eyre = "*" 
criterion = { version = "0.8", features = ["html_reports"] }
assert_hex = "0.4.1"


[[bench]]
name = "bench_dynarec_v2"
harness = false
