[package]
name = "pchan-gpu"
version = "0.1.0"
edition = "2024"

[dependencies]
smol = "2.0.2"
wgpu = "29.0.1"
flume = "0.12.0"
color-eyre = "*"
slab.workspace = true
thiserror = "2.0.18"
pchan-macros = { workspace = true }
pchan-utils = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
winit = "0.30.13"
bon = { version = "3.9.1", features = ["experimental-getter", "experimental-overwritable"] }

[dev-dependencies]
pretty_assertions = {version = "1.4.1", features = ["unstable"]}
rstest = "*"
color-eyre = "*" 
criterion = { version = "0.8", features = ["html_reports"] }
