[package]
name = "pchan-gpu"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "29.0.1"
thiserror = "2.0.18"
pchan-emu = {workspace = true}
pchan-macros = { workspace = true }
pchan-utils = { workspace = true }
tracing = { workspace = true }
glam = "0.32.1"
smol.workspace = true
kanal.workspace = true
heapless = "0.9.2"
bitbybit.workspace = true

[dev-dependencies]
pretty_assertions = {version = "1.4.1", features = ["unstable"]}
rstest = "*"
color-eyre = "*" 
criterion = { version = "0.8", features = ["html_reports"] }
ratatui = "*"
bitbybit.workspace = true
arbitrary-int.workspace = true
