[package]
name = "pchan-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { workspace = true }
derive_more = { version = "2.1.1", features = ["full"] }
tracing = { workspace = true }
const-hex.workspace = true
heapless = "0.9.2"
bon = "3.9.1"
kanal.workspace = true

[dev-dependencies]
pretty_assertions = {version = "1.4.1", features = ["unstable"]}
rstest = "*"
color-eyre = "*" 
criterion = { version = "0.8", features = ["html_reports"] }


[[bench]]
name = "hex"
harness = false
